change in file an execute structure

--- a/app/index.html
+++ b/app/index.html
@@ -47,11 +47,13 @@
     <script src="/bower_components/jquery.cookie/jquery.cookie.js"></script>
     <script src="/bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <script src="/bower_components/foundation/js/foundation.js"></script>
+    <script src="/bower_components/p5js/docs/js/p5.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <!-- <script src="src/menu.js"></script> -->
     <!-- endbuild -->
   </body>
 </html>
