--- a/app/index.html
+++ b/app/index.html
@@ -27,9 +27,11 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <component is="home">
-    <!-- content changes when vm.currentview changes! -->
-    </component>
+    <div id="wrapper">
+      <component is="home">
+      <!-- content changes when vm.currentview changes! -->
+      </component>
+    </div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
@@ -53,7 +55,6 @@
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
-    <!-- <script src="src/menu.js"></script> -->
     <!-- endbuild -->
   </body>
 </html>
