Preload process bar test

--- a/app/index.html
+++ b/app/index.html
@@ -27,6 +27,14 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+
+    <div id="state"></div>
+    <div id="progress">...</div>
+    <div id="progressbar">
+      <div class="bar"></div>
+    </div>
+
+
     <div id="wrapper">
       <component is="home">
       <!-- content changes when vm.currentview changes! -->
@@ -50,6 +58,7 @@
     <script src="/bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <script src="/bower_components/foundation/js/foundation.js"></script>
     <script src="/bower_components/p5js/docs/js/p5.min.js"></script>
+    <script src="/bower_components/PreloadJS/lib/preloadjs-0.6.1.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
