changes in the preloader

--- a/app/index.html
+++ b/app/index.html
@@ -28,16 +28,14 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div id="state"></div>
-    <div id="progress">...</div>
-    <div id="progressbar">
-      <div class="bar"></div>
-    </div>
-
-
     <div id="wrapper">
+      <component is="loader">
+      <!-- content changes when vm.currentview changes! -->
+      </component>
       <component is="home">
       <!-- content changes when vm.currentview changes! -->
+      </component>
+      <!-- <component is="home">
       </component>
     </div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
