--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>theStartpunkt</title>
+    <title>thePage</title>
 
     <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
     <!-- Place favicon.ico in the root directory -->
@@ -28,7 +28,7 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div id="wrapper">
+    <div id="wrapper" class"noJS">
       <component is="loader">
       <!-- content changes when vm.currentview changes! -->
       </component>
@@ -62,6 +62,14 @@
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <noscript>
+    <style type="text/css">
+        .noJs {display:none;}
+    </style>
+    <div class="noscriptmsg">
+    You don't have javascript enabled.  Good luck with that.
+    </div>
+    </noscript>
     <!-- endbuild -->
   </body>
 </html>
