--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,6 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="/bower_components/foundation/css/foundation.css" />
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -20,7 +19,6 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/vendor/modernizr.js -->
-    <script src="/bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
   <body>
@@ -30,12 +28,8 @@
 
     <div id="wrapper" class"noJS">
       <component is="loader">
-      <!-- content changes when vm.currentview changes! -->
       </component>
       <component is="home">
-      <!-- content changes when vm.currentview changes! -->
-      </component>
-      <!-- <component is="home">
       </component>
     </div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
@@ -50,18 +44,13 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/fastclick/lib/fastclick.js"></script>
-    <script src="/bower_components/jquery.cookie/jquery.cookie.js"></script>
-    <script src="/bower_components/jquery-placeholder/jquery.placeholder.js"></script>
-    <script src="/bower_components/foundation/js/foundation.js"></script>
-    <script src="/bower_components/p5js/docs/js/p5.min.js"></script>
-    <script src="/bower_components/PreloadJS/lib/preloadjs-0.6.1.min.js"></script>
+    <script src="bower_components/PreloadJS/lib/preloadjs-0.6.1.combined.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
     <script src="scripts/main.js"></script>
+    <!-- endbuild -->
     <noscript>
     <style type="text/css">
         .noJs {display:none;}
@@ -70,6 +59,5 @@
     You don't have javascript enabled.  Good luck with that.
     </div>
     </noscript>
-    <!-- endbuild -->
   </body>
 </html>
