Changed to vue.js 1.0 version, major changes in app structue

--- a/app/index.html
+++ b/app/index.html
@@ -27,11 +27,10 @@
     <![endif]-->
 
     <div id="wrapper" class"noJS">
-      <component is="{{currentView}}" keep-alive>
-        <!-- inactive components will be cached! -->
+      <component is="loader">
       </component>
-      <!-- <component is="home">
-      </component> -->
+      <component is="home">
+      </component>
     </div>
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
