Tried different app structures, dynamic component not successfull --> therefore switch to static

--- a/app/index.html
+++ b/app/index.html
@@ -27,7 +27,7 @@
     <![endif]-->
 
     <div id="wrapper" class"noJS">
-      <component is="loader">
+      <component is="preloader">
       </component>
       <component is="home">
       </component>
