changed to multiple component directives

--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
         .noJs {display:none;}
     </style>
     <div class="noscriptmsg">
-    You don't have javascript enabled.  Good luck with that.
+    You don't have javascript enabled.
     </div>
     </noscript>
   </body>
