transition fixed. fragment instance fixed by adding root element. animation broken. needs fixing

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
         .noJs {display:none;}
     </style>
     <div class="noscriptmsg">
-    You don't have javascript enabled.
+    You don't have javascript enabled. - activated for greatness -
     </div>
     </noscript>
   </body>
