--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,8 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!-- <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,900italic,900,700italic,700,600italic' rel='stylesheet' type='text/css'> -->
-    <title>thePage</title>
+    <title>[Interaction Design - Michael Schade]’</title>
+    <link rel="stylesheet" href="/styles/main.css">
     <!-- <link rel="stylesheet" type="text/css" href="styles/main.css" /> -->
 
     <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
@@ -29,18 +30,6 @@
     <div id="wrapper">
       <router-view></router-view>
     </div>
-
-    <script async>
-      var cb = function() {
-        var l = document.createElement('link'); l.rel = 'stylesheet';
-        l.href = '/styles/main.css';
-        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
-      };
-      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-          webkitRequestAnimationFrame || msRequestAnimationFrame;
-      if (raf) raf(cb);
-      else window.addEventListener('load', cb);
-    </script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
