--- a/app/index.html
+++ b/app/index.html
@@ -27,11 +27,16 @@
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
+    <!-- htmlmin:ignore -->
     <div id="wrapper">
-      <router-view></router-view>
+      <!-- htmlmin:ignore -->
+      <router-view
+      :home="home"
+      ></router-view>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+    <!-- htmlmin:ignore -->
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
@@ -40,9 +45,7 @@
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
       ga('create','UA-XXXXX-X');ga('send','pageview');
     </script>
-
     <script async src="scripts/main.js"></script>
-
     <noscript>
     <style type="text/css">
         .noJs {display:none;}
