--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <!-- htmlmin:ignore -->
-    <div id="wrapper">
+    <div id="wrapper" :style="[home.negative ? {backgroundColor: '#000' } : '']">
       <!-- htmlmin:ignore -->
       <router-view
       :home="home"
