flex grid fixes

--- a/app/index.html
+++ b/app/index.html
@@ -28,13 +28,15 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <!-- htmlmin:ignore -->
-    <div id="wrapper" :style="[home.negative ? {backgroundColor: '#000' } : '']">
+    <div id="wrapper" class="expanded row small-collapse" :style="[home.negative ? {backgroundColor: '#000' } : '']">
+      <div class="small-12 columns">
       <!-- htmlmin:ignore -->
-      <router-view
-      :home="home"
-      :work="work"
-      transition-mode="out-in"
-      ></router-view>
+        <router-view
+        :home="home"
+        :work="work"
+        transition-mode="out-in"
+        ></router-view>
+      </div>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
