--- a/app/index.html
+++ b/app/index.html
@@ -34,6 +34,7 @@
         <router-view
         :home="home"
         :work="work"
+        :about="about"
         transition-mode="out-in"
         ></router-view>
       </div>
