--- a/app/index.html
+++ b/app/index.html
@@ -28,7 +28,7 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <!-- htmlmin:ignore -->
-    <div id="wrapper" class="row fullWidth small-collapse" :style="[home.negative ? {backgroundColor: '#000' } : '']">
+    <div id="wrapper" class="row fullWidth small-collapse">
       <div class="columns align-justify">
       <!-- htmlmin:ignore -->
         <router-view
