safari fix on transform

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,8 @@
         :home="home"
         :work="work"
         :about="about"
-        :coded="coded"
+        :codedreality="codedreality"
+        :musicalcubes="musicalcubes"
         transition-mode="out-in"
         ></router-view>
       </div>
