pushing content to the page

--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,9 @@
         :about="about"
         :codedreality="codedreality"
         :musicalcubes="musicalcubes"
+        :humanandmachine="humanandmachine"
+        :thewall="thewall"
+        :lightminers="lightminers"
         transition-mode="out-in"
         ></router-view>
       </div>
