--- a/app/index.html
+++ b/app/index.html
@@ -40,6 +40,9 @@
         :humanandmachine="humanandmachine"
         :thewall="thewall"
         :lightminers="lightminers"
+        :mubrace="mubrace"
+        :cucumbis="cucumbis"
+        :goldmann="goldmann"
         transition-mode="out-in"
         ></router-view>
       </div>
