tests in pictures section

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
         :mubrace="mubrace"
         :cucumbis="cucumbis"
         :goldmann="goldmann"
+        :thepictures="thepictures"
         transition-mode="out-in"
         ></router-view>
       </div>
