--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!-- <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,900italic,900,700italic,700,600italic' rel='stylesheet' type='text/css'> -->
     <title>[Interaction Design - Michael Schade]’</title>
-    <link rel="stylesheet" href="/styles/main.css">
+    <link async rel="stylesheet" href="/styles/main.css">
     <!-- <link rel="stylesheet" type="text/css" href="styles/main.css" /> -->
+    <title>thePage</title>
 
     <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
     <!-- Place favicon.ico in the root directory -->
