changes on pictures and some SASS improvements

--- a/app/index.html
+++ b/app/index.html
@@ -5,14 +5,14 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!-- <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,200italic,300,300italic,400italic,600,900italic,900,700italic,700,600italic' rel='stylesheet' type='text/css'> -->
-    <title>[Interaction Design - Michael Schade]</title>
+    <title>Interaction Design - Michael Schade</title>
     <link async rel="stylesheet" href="/styles/main.css">
-    <!-- <link rel="stylesheet" type="text/css" href="styles/main.css" /> -->
-    <title>thePage</title>
+    <link rel="icon"
+      type="image/png"
+      href="/images/icon.png">
 
     <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
     <!-- Place favicon.ico in the root directory -->
-
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <!-- endbower -->
@@ -24,7 +24,7 @@
     <!-- build:js scripts/vendor/modernizr.js -->
     <!-- endbuild -->
   </head>
-  <body >
+  <body>
     <!--[if lt IE 10]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -58,7 +58,7 @@
       e=o.createElement(i);r=o.getElementsByTagName(i)[0];
       e.src='https://www.google-analytics.com/analytics.js';
       r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
+      ga('create','UA-80210142-1');ga('send','pageview');
     </script>
     <script async src="scripts/main.js"></script>
     <noscript>
